...
		"placeholders": {},
		"comments": ["Subtitle explaining purpose of biometrics"],
		"origin": [["src/features/onboarding/steps.ts", 33]],
		"translation": "Ota käyttöön puhelimesi biometriset toiminnot varmistaaksesi, että vain sinä pääset lompakkoosi ja voit jakaa tietoja."
	},
	"menu.item.activity": {
		"message": "Activity",
		"placeholders": {},
		"comments": ["Label for activity log"],
		"origin": [["src/features/menu/MenuScreen.tsx", 106]],
		"translation": "Toiminta"
	},
	"activity.title": {
...
		"placeholders": {},
		"comments": ["Label for a notification about a received credential"],
		"origin": [["src/features/didcomm/InboxScreen.tsx", 78]],
		"translation": "Kortti"
	},
	"common.cardAdded": {
		"message": "Card added",
		"placeholders": {},
		"comments": ["Shown when a card has been successfully received"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 247]],
		"translation": "Kortti lisätty"
	},
	"credentials.cardAttributes": {
		"message": "Card attributes",
		"placeholders": {},
		"comments": [
			"Label for button that shows detailed card attributes",
			"Title shown in header for the credential detail attributes screen"
		],
		"origin": [
			["src/features/wallet/CredentialDetailAttributesScreen.tsx", 93],
			["src/features/wallet/CredentialDetailScreen.tsx", 109]
		],
		"translation": "Kortin tiedot"
	},
	"credentials.detailsTitle": {
		"message": "Card details",
		"placeholders": {},
		"comments": ["Title of the credential details screen"],
		"origin": [["src/features/wallet/CredentialDetailScreen.tsx", 91]],
		"translation": "Kortin tiedot"
	},
	"cardLifecycle.limitedByDate.expired.title": {
...
			"Section heading for list of received cards in the activity detail screen"
		],
		"origin": [["src/features/activity/ActivityDetailScreen.tsx", 169]],
		"translation": "Kortit"
	},
	"onboarding.pin.title": {
		"message": "Choose a 6-digit PIN",
		"placeholders": {},
		"comments": ["Heading when user chooses a PIN"],
		"origin": [["src/features/onboarding/steps.ts", 9]],
		"translation": "Valitse 6-numeroinen PIN-koodi"
	},
	"onboardingIntroduction.step1.description": {
...
		"placeholders": {},
		"comments": ["Intro sentence before showing support email address"],
		"origin": [["src/features/menu/AboutScreen.tsx", 34]],
		"translation": "Lisätietoja saat ottamalla yhteyttä"
	},
	"onboardingWalletExplanation.getStarted": {
		"message": "Get Started",
		"placeholders": {},
		"comments": ["Button label to finish onboarding explanation"],
		"origin": [["src/features/onboarding/screens/wallet-explanation.tsx", 71]],
		"translation": "Aloita"
	},
	"onboardingWelcome.getStarted": {
...
		"placeholders": {},
		"comments": ["Button label to open device settings"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 38]],
		"translation": "Siirry asetuksiin"
	},
	"common.goToWallet": {
		"message": "Go to wallet",
		"placeholders": {},
		"comments": ["Button label to return to the wallet"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 33]],
		"translation": "Siirry lompakkoon"
	},
	"button.gotIt": {
...
			"Used in predicate statements like: age greater than or equal to 18"
		],
		"origin": [["src/utils/formatePredicate.ts", 10]],
		"translation": "suurempi tai yhtä suuri kuin"
	},
	"home.helloWithoutName": {
		"message": "Hello!",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/wallet/WalletScreen.tsx", 59]],
		"translation": "Hei!"
	},
	"credentials.hideMetadata": {
...
		"placeholders": {},
		"comments": ["Shown when user declines sharing proof"],
		"origin": [["src/features/share/MdocOfflineSharingScreen.tsx", 148]],
		"translation": "Tietojen jakaminen on hylätty"
	},
	"pidSetup.dataProtection.title": {
		"message": "Protect your data",
		"placeholders": {},
		"comments": [],
		"origin": [["src/utils/sharedPidSetup.ts", 25]],
		"translation": "Suojaa tietosi"
	},
	"requestPurpose.purposeHeading": {
...
			"Shown in activity detail when receiving credentials was cancelled by the user"
		],
		"origin": [["src/features/activity/ActivityDetailScreen.tsx", 134]],
		"translation": "Korttien vastaanottaminen kohteesta {0} peruttiin."
	},
	"activity.latest.title": {
		"message": "Recent activity",
		"placeholders": {},
		"comments": ["Section title for the latest activity card"],
		"origin": [["src/features/wallet/components/LatestActivityCard.tsx", 10]],
		"translation": "Viimeaikainen toiminta"
	},
	"verifyPartySlide.recognizedOrganizationTitle": {
...
		"placeholders": {},
		"comments": ["The region of a person"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 512]],
		"translation": "Alue"
	},
	"onboarding.pinReenter.title": {
		"message": "Repeat your PIN",
		"placeholders": {},
		"comments": ["Heading when user repeats their PIN"],
		"origin": [["src/features/onboarding/steps.ts", 21]],
		"translation": "Syötä sama PIN-koodi uudelleen"
	},
	"inbox.notificationType.request": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 223]],
		"translation": "Vaadittava parametri puuttuu, jotta kutsu voidaan hyväksyä."
	},
	"payShare.title": {
		"message": "Review the request",
		"placeholders": {},
		"comments": ["Main heading in the pay & share screen"],
		"origin": [["src/features/share/slides/PayAndShareSlide.tsx", 52]],
		"translation": "Tarkista pyyntö"
	},
	"submission.reviewTitle": {
...
			"Heading shown when user is asked to enter their app PIN to confirm a request"
		],
		"origin": [["src/features/share/slides/PinSlide.tsx", 39]],
		"translation": "Lähetä tiedot PIN-koodillasi"
	},
	"onboarding.biometrics.title": {
		"message": "Set up biometrics",
		"placeholders": {},
		"comments": ["Heading when user sets up biometrics"],
		"origin": [["src/features/onboarding/steps.ts", 27]],
		"translation": "Aseta biometriikka"
	},
	"common.setUpLater": {
		"message": "Set up later",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 24]],
		"translation": "Valmistele myöhemmin"
	},
	"menu.item.settings": {
...
		"placeholders": {},
		"comments": ["Header title for the settings screen"],
		"origin": [["src/features/menu/SettingsScreen.tsx", 148]],
		"translation": "Asetukset"
	},
	"submission.share": {
		"message": "Share",
		"placeholders": {},
		"comments": ["Button label to accept and share credentials"],
		"origin": [["src/features/share/slides/ShareCredentialsSlide.tsx", 51]],
		"translation": "Jaa"
	},
	"offlineQr.heading": {
...
		"placeholders": {},
		"comments": ["The street where someone lives"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 417]],
		"translation": "Katu"
	},
	"common.success": {
		"message": "Success!",
		"placeholders": {},
		"comments": ["Title shown when an action completes successfully"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 43]],
		"translation": "Onnistui!"
	},
	"pidSetup.idCardComplete.title": {
...
		"placeholders": {},
		"comments": ["Confirm button text for archiving a card"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 333]],
		"translation": "Kyllä, arkistoi"
	},
	"common.confirmContinue": {
		"message": "Yes, continue",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 56]],
		"translation": "Kyllä, jatka"
	},
	"common.confirmDecline": {
...
