appId: id.skippy.wallet.preview
---
- openLink:
    link: ${deeplink}

- runFlow:
    when:
      visible: .*Open in.*
      platform: ios
    commands:
      - tapOn: Open

- repeat:
    times: 6
    commands:
      - tapOn: "Pin number 1"

- extendedWaitUntil:
    visible: "Yes, continue"
    timeout: 100000
- tapOn: "Yes, continue"

- assertVisible: Review the request
- tapOn: Share

- repeat:
    times: 6
    commands:
      - tapOn: "Pin number 1"
- assertVisible: Success!

# On Android the button is "Go to wallet" (without space), while on iOS a trailing space is required.
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Go to wallet"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Go to wallet,  "
